--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -21,6 +21,14 @@
             android:layout_height="200px"
             android:text="+/n3" />
 
+        <ImageView
+            android:id="@+id/circle_2"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30sp"
+            android:src="@drawable/circle" />
+
         <Button
             android:id="@+id/places"
             android:layout_width="wrap_content"
