--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -6,44 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".IndexFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+    <TextView
+        android:id="@+id/coordinates"
+        android:layout_width="268dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="138dp"
+        android:layout_marginTop="420dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="69dp"
+        android:text="+/n3"
+        app:layout_constraintBottom_toTopOf="@+id/places"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/places"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="138dp"
+        android:layout_marginTop="69dp"
+        android:layout_marginEnd="138dp"
+        android:layout_marginBottom="114dp"
+        android:text="View Places"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/coordinates" />
 
-        <TextView
-            android:id="@+id/coordinates"
-            android:layout_width="match_parent"
-            android:layout_height="200px"
-            android:text="+/n3" />
-
-        <ImageView
-            android:id="@+id/circle_2"
-            android:layout_width="60sp"
-            android:layout_height="60sp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30sp"
-            android:src="@drawable/circle" />
-
-        <Button
-            android:id="@+id/places"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="138dp"
-            android:layout_marginEnd="138dp"
-            android:layout_marginBottom="222dp"
-            android:text="View Places" />
-
-        <TextView
-            android:id="@+id/test2"
-            android:layout_width="match_parent"
-            android:layout_height="50px"
-            android:text="TextView" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/gpstext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" "
+        tools:layout_editor_absoluteX="19dp"
+        tools:layout_editor_absoluteY="49dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
